--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,4 @@ jobs:
       - uses: hadolint/hadolint-action@v1.6.0
         with:
           dockerfile: Dockerfile
-
-
+          ignore: DL3018
